logs/javadoc.err
/Users/dev/test/copeems/app/controllers/Application.java:8: error: package models does not exist
import models.*;
^
